update-manager (1:0.124) UNRELEASEDkarmic; urgency=low

  * AutoUpgradeTester:
    - add kubuntu, main-all, lts-server, lts-ubuntu profiles
  * ported to gtkbuilder
  * UpdateManager/UpdateManager.py:
    - warn if running on battery (LP: #377697)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 23:12:45 +0200

update-manager (1:0.123) karmic; urgency=low

  * debian/control:
    - build auto-upgrade-tester package to allow easy upgrade
      testing with a set of default profiles
  * UpdateManager/Core/MyCache.py:
    - wording fix (thanks to Ng)
  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - fix bug in dpkg_progress_log filea
  * AutoUpgradeTester/UpgradeTestBackend.py:
    - import the http_proxy from the environment
    - make the resultdir configrable and default to
      /var/cache/auto-upgrade-tester/result/
  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - make the path for the kvm working images configurable
      and default to /var/cache/auto-upgrade-tester
  * AutoUpgradeTester/auto-upgrade-tester:
    - move login() into the backends
  * AutoUpgradeTester/auto-upgrade-tester:
    - allow shorthand profile names like "ubuntu" instead of
      full pathes

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Jun 2009 11:36:08 +0200

update-manager (1:0.122) karmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add handler to check for wl module and transition
      to bcmwl-kernel-source (LP: #381684)
  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - add bool option "NonInteractive/DpkgProgressLog" to write
      a timing log of the upgrade (for the foundations-karmic-pre-unpacking
      spec)
    - add "NonInteractive/DebugBrokenScripts" option that will re-run
      failed maintainer scripts with debug options
  * DistUpgrade/DistUpgrade.cfg:
    - add defaults for the NonInteractive section that match the 
      interactive upgrades (for better landscape support)
    - enable apport again