@@ -5,6 +5,8 @@ update-manager (1:0.124) UNRELEASEDkarmic; urgency=low
   * ported to gtkbuilder
   * UpdateManager/UpdateManager.py:
     - warn if running on battery (LP: #377697)
+    - make it less stealty by setting the stick() property if
+      run in auto-open mode (LP: #369820)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 23:12:45 +0200
 
